[project]
name = "djangoapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Teguh Samudra",email = "teguhsam9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.0.3",
    "django-allauth[socialaccount] (>=65.3.1,<66.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"

